# bergamot

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bergamot.conf.sample  flake.nix  issues.md  nzbg.conf.sample
crates/bergamot/: Cargo.toml  build.rs
crates/bergamot-config/: Cargo.toml
crates/bergamot-config/src/: model.rs  parse.rs
crates/bergamot-core/: Cargo.toml
crates/bergamot-core/src/: models.rs
crates/bergamot-diskstate/: Cargo.toml
crates/bergamot-diskstate/src/: lib.rs
crates/bergamot-extension/: Cargo.toml
crates/bergamot-feed/: Cargo.toml
crates/bergamot-feed/src/: coordinator.rs  lib.rs  rss.rs
crates/bergamot-logging/: Cargo.toml
crates/bergamot-logging/src/: lib.rs  tracing_layer.rs
crates/bergamot-nntp/: Cargo.toml
crates/bergamot-nntp-stub/: Cargo.toml  README.md
crates/bergamot-nntp-stub/src/: lib.rs  main.rs
crates/bergamot-nntp-stub/tests/: stub_harness.rs
crates/bergamot-nntp/src/: error.rs  lib.rs  machine.rs  model.rs  pool.rs  protocol.rs  scheduler.rs  speed.rs
crates/bergamot-nzb/: Cargo.toml
crates/bergamot-nzb/src/: lib.rs  model.rs  parser.rs
crates/bergamot-par2/: Cargo.toml
crates/bergamot-par2/benches/: vs_par2cmdline.rs
crates/bergamot-par2/src/: galois.rs  lib.rs  model.rs  parser.rs  repair.rs  verify.rs
crates/bergamot-par2/src/format/: packets.rs
crates/bergamot-par2/tests/: integration.rs  par2cmdline_compliance.rs
crates/bergamot-par2/tests/fixtures/: download.sh
crates/bergamot-postproc/: Cargo.toml
crates/bergamot-postproc/src/: cleanup.rs  config.rs  deobfuscate.rs  lib.rs  mover.rs  par2.rs  processor.rs
crates/bergamot-queue/: Cargo.toml
crates/bergamot-queue/src/: command.rs  coordinator.rs  error.rs  lib.rs  status.rs
crates/bergamot-scheduler/: Cargo.toml
crates/bergamot-scheduler/src/: lib.rs
crates/bergamot-server/: Cargo.toml
crates/bergamot-server/src/: auth.rs  config.rs  lib.rs  nzbget.conf.template  rpc.rs  rpc_module.rs  server.rs  shutdown.rs  tls.rs
crates/bergamot-server/webui/: bootstrap-compat.css  config.js  dark-theme.css  datetime.js  downloads.js  edit.js  fasttable.js  feed.js  history.js  index.html  index.js  light-theme.css  messages.js  statistics.js  status.js  style.css  system-health.js  system-info.js  ui.js  upload.js  util.js
crates/bergamot-yenc/: Cargo.toml
crates/bergamot-yenc/src/: cache.rs  decode.rs  lib.rs
crates/bergamot/src/: app.rs  cache.rs  cli.rs  download.rs  main.rs  writer.rs
crates/bergamot/tests/: e2e_flow.rs
crates/nzbg/: Cargo.toml
crates/nzbg-config/: Cargo.toml
crates/nzbg-config/src/: error.rs  lib.rs  model.rs  parse.rs
crates/nzbg-core/: Cargo.toml
crates/nzbg-core/src/: models.rs
crates/nzbg-diskstate/: Cargo.toml
crates/nzbg-diskstate/src/: lib.rs
crates/nzbg-extension/: Cargo.toml
crates/nzbg-extension/src/: lib.rs  runner.rs
crates/nzbg-feed/: Cargo.toml
crates/nzbg-feed/src/: coordinator.rs  fetch.rs  lib.rs  rss.rs
crates/nzbg-logging/: Cargo.toml
crates/nzbg-logging/src/: lib.rs
crates/nzbg-nntp/: Cargo.toml
crates/nzbg-nntp-stub/: Cargo.toml  README.md
crates/nzbg-nntp-stub/src/: lib.rs  main.rs
crates/nzbg-nntp-stub/tests/: stub_harness.rs
crates/nzbg-nntp/src/: error.rs  lib.rs  model.rs  pool.rs  protocol.rs  speed.rs
crates/nzbg-nzb/: Cargo.toml
crates/nzbg-nzb/src/: error.rs  lib.rs  model.rs  parser.rs
crates/nzbg-par2/: Cargo.toml
crates/nzbg-par2/benches/: vs_par2cmdline.rs
crates/nzbg-par2/src/: error.rs  galois.rs  lib.rs  model.rs  parser.rs  repair.rs  verify.rs
crates/nzbg-par2/src/format/: header.rs  mod.rs
crates/nzbg-par2/tests/: integration.rs  par2cmdline_compliance.rs
crates/nzbg-postproc/: Cargo.toml
crates/nzbg-postproc/src/: config.rs  error.rs  lib.rs  mover.rs  par2.rs  processor.rs  unpack.rs
crates/nzbg-queue/: Cargo.toml
crates/nzbg-queue/src/: command.rs  coordinator.rs  error.rs  lib.rs  status.rs
crates/nzbg-scheduler/: Cargo.toml
crates/nzbg-scheduler/src/: lib.rs
crates/nzbg-server/: Cargo.toml  build.rs
crates/nzbg-server/src/: auth.rs  config.rs  error.rs  lib.rs  nzbget.conf.template  rpc.rs  server.rs  status.rs  xmlrpc.rs
crates/nzbg-server/webui/: config.js  index.html
crates/nzbg-yenc/: Cargo.toml
crates/nzbg-yenc/src/: decode.rs  error.rs  lib.rs  model.rs
crates/nzbg/src/: app.rs  cache.rs  cli.rs  daemon.rs  download.rs  lib.rs  main.rs  writer.rs
crates/nzbg/tests/: e2e_flow.rs
docs/: 00-overview.md  01-core-data-structures.md  03-nntp-engine.md  04-yenc-decoding.md  05-queue-coordinator.md  06-post-processing.md  07-web-server-api.md  08-configuration.md  09-scheduler-services.md  11-extension-system.md  12-disk-state.md  13-logging-history.md  14-rust-architecture.md  15-download-flow.md  connection-scaling-bottlenecks.md  e2e-test-gaps.md  fully-async-improvements.md  implementation-plan.md  production-readiness-gap-analysis.md
docs/design/: 00-overview.md  01-core-data-structures.md  02-rust-architecture.md  03-download-flow.md  14-rust-architecture.md
docs/implementation/: 00-nzb-parsing.md  01-nntp-engine.md  02-nzb-parsing.md  02-yenc-decoding.md  03-queue-coordinator.md  04-post-processing.md  05-web-server-api.md  06-configuration.md  07-scheduler-services.md  08-feed-system.md  09-extension-system.md  10-disk-state.md  11-logging-history.md
docs/operations/: connection-scaling-bottlenecks.md  fully-async-improvements.md
docs/operations/systemd/: nzbg.service
docs/planning/: e2e-test-gaps.md  implementation-plan.md  production-readiness-gap-analysis.md
fixtures/nntp/: README.md  fixtures-all-missing.json  fixtures-basic.json  fixtures-complete.json  fixtures-concurrent.json  fixtures-multifile.json  fixtures-multiseg.json  fixtures-par2.json  fixtures.json  multi.nzb  multifile.nzb  par2.nzb  sample.nzb
nix/: module.nix
