[workspace]
resolver = "2"
members = [
  "crates/nzbg",
  "crates/nzbg-scheduler",
  "crates/nzbg-feed",
  "crates/nzbg-extension",
  "crates/nzbg-diskstate",
  "crates/nzbg-logging",
  "crates/nzbg-core",
  "crates/nzbg-nzb",
  "crates/nzbg-nntp",
  "crates/nzbg-yenc",
  "crates/nzbg-queue",
  "crates/nzbg-par2",
  "crates/nzbg-postproc",
  "crates/nzbg-server",
  "crates/nzbg-config",
]
