[workspace]
resolver = "2"
members = [
  "crates/bergamot",
  "crates/bergamot-scheduler",
  "crates/bergamot-feed",
  "crates/bergamot-extension",
  "crates/bergamot-diskstate",
  "crates/bergamot-logging",
  "crates/bergamot-core",
  "crates/bergamot-nzb",
  "crates/bergamot-nntp",
  "crates/bergamot-nntp-stub",
  "crates/bergamot-yenc",
  "crates/bergamot-queue",
  "crates/bergamot-par2",
  "crates/bergamot-postproc",
  "crates/bergamot-server",
  "crates/bergamot-config",
]

[workspace.package]
license = "GPL-2.0-or-later"
