[package]
name = "bergamot-logging"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

bergamot-core = { path = "../bergamot-core" }

[dev-dependencies]
serde_json = "1.0"
