[package]
name = "bergamot-nntp-stub"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net", "io-util", "time", "rt-multi-thread", "macros", "sync"] }

[dev-dependencies]
bergamot-nntp = { path = "../bergamot-nntp" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
