[package]
name = "bergamot-nntp"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
async-trait = "0.1"
futures = "0.3.31"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["net", "io-util", "time", "rt-multi-thread", "macros", "sync"] }
tokio-rustls = "0.26"
tracing = "0.1"
webpki-roots = "0.26"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
