[package]
name = "bergamot-queue"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
bergamot-core = { path = "../bergamot-core" }
bergamot-nntp = { path = "../bergamot-nntp" }
bergamot-nzb = { path = "../bergamot-nzb" }
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "sync", "time", "rt-multi-thread"] }
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.11"
