[package]
name = "nzbg-diskstate"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

nzbg-core = { path = "../nzbg-core" }
nzbg-feed = { path = "../nzbg-feed" }

[dev-dependencies]
serde_json = "1.0"
tempfile = "3"
