[package]
name = "nzbg-extension"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["process"] }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
