[package]
name = "nzbg-feed"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
nzbg-core = { path = "../nzbg-core" }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
