[package]
name = "nzbg-logging"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

nzbg-core = { path = "../nzbg-core" }

[dev-dependencies]
serde_json = "1.0"
