[package]
name = "nzbg-nntp-stub"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net", "io-util", "time", "rt-multi-thread", "macros", "sync"] }

[dev-dependencies]
nzbg-nntp = { path = "../nzbg-nntp" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
