[package]
name = "nzbg-postproc"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "process", "sync", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
