[package]
name = "nzbg-postproc"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
async-trait = "0.1"
nzbg-core = { path = "../nzbg-core" }
nzbg-extension = { path = "../nzbg-extension" }
nzbg-par2 = { path = "../nzbg-par2" }
thiserror = "2.0"
tokio = { version = "1", features = ["fs", "macros", "process", "sync", "rt-multi-thread"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "time"] }
