[package]
name = "nzbg-scheduler"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
fs2 = "0.4"
nzbg-config = { path = "../nzbg-config" }
nzbg-core = { path = "../nzbg-core" }
nzbg-feed = { path = "../nzbg-feed" }
nzbg-diskstate = { path = "../nzbg-diskstate" }
nzbg-nntp = { path = "../nzbg-nntp" }
nzbg-queue = { path = "../nzbg-queue" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.35", features = ["fs", "macros", "rt", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3"
