[package]
name = "nzbg-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
nzbg-core = { path = "../nzbg-core" }
nzbg-diskstate = { path = "../nzbg-diskstate" }
nzbg-queue = { path = "../nzbg-queue" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "fs"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
