[package]
name = "nzbg"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow = "1.0"
libc = "0.2"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
nzbg-config = { path = "../nzbg-config" }
nzbg-core = { path = "../nzbg-core" }
nzbg-diskstate = { path = "../nzbg-diskstate" }
nzbg-extension = { path = "../nzbg-extension" }
nzbg-feed = { path = "../nzbg-feed" }
nzbg-logging = { path = "../nzbg-logging" }
nzbg-nntp = { path = "../nzbg-nntp" }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
nzbg-nzb = { path = "../nzbg-nzb" }
nzbg-postproc = { path = "../nzbg-postproc" }
nzbg-queue = { path = "../nzbg-queue" }
nzbg-scheduler = { path = "../nzbg-scheduler" }
nzbg-server = { path = "../nzbg-server" }
nzbg-yenc = { path = "../nzbg-yenc" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
dashmap = "6.1.0"

[dev-dependencies]
chrono = "0.4"
crc32fast = "1"
tempfile = "3.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
nzbg-nntp-stub = { path = "../nzbg-nntp-stub" }
serde_json = "1.0"
base64 = "0.22"
